# old-tcl-evalbot

./: .gitignore  .gitmodules  GypsFulvus.cabal  README.md  exquisiterobot.conf.example  stack.yaml
plugins/STDIO/: Plugin.hs
src/: GypsFulvus.hs  Main.hs  Test-BalanceBrackets.hs  Test-Carrion-IRC.hs  Test-Carrion-TCL.hs  Test-STDIO-Haskeline.hs
src/Carrion/Plugin/: TCL.hs
src/Carrion/Plugin/IO/: STDIO.hs
src/Carrion/Plugin/IO/IRC/: Client.hs
src/GypsFulvus/: PluginStuff.hs
src/smeggdrop/: smeggdrop.conf.default  smeggdrop.tcl
src/smeggdrop/smeggdrop/: interpx.tcl  smeggdrop.tcl  versioned_interpreter.tcl
src/smeggdrop/smeggdrop/commands/: http.tcl  log.tcl  publish.tcl
src/tclstubswrapper/: tclstubs.c  tclstubs.h
