name:                GypsFulvus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/hastur666/gypsfulvus/src/master/
license:             AGPL-3
license-file:        LICENSE
author:              no
maintainer:          no
copyright:           2020 confidential
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
         exposed-modules: GypsFulvus
         other-modules:   GypsFulvus.PluginStuff
         default-language:    Haskell2010
         hs-source-dirs:      src
         build-depends:
                       base >= 4.7 && < 5,
                       stm,
                       containers,
                       text,
                       plugins >= 1.6.0,
                       directory,
                       hashable
         ghc-options:
            -O2
            -threaded
            -with-rtsopts=-N

executable GypsFulvus
         default-language:    Haskell2010
         build-depends:
                       base >= 4.7 && < 5,
                       stm,
                       containers,
                       text,
                       plugins >= 1.6.0,
                       directory,
                       hashable
         ghc-options:
            -O2
            -threaded
            -with-rtsopts=-N
         hs-source-dirs:      src
         other-modules: GypsFulvus, GypsFulvus.PluginStuff
         main-is:             Main.hs
