name:                GypsFulvus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/hastur666/gypsfulvus/src/master/
license:             AGPL-3
license-file:        LICENSE
author:              no
maintainer:          no
copyright:           2020 confidential
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
         exposed-modules: GypsFulvus, Carrion.Plugin.IO.STDIO
         other-modules:   GypsFulvus.PluginStuff
         default-language:    Haskell2010
         hs-source-dirs:      src
         build-depends:
                       base >= 4.7 && < 5,
                       stm,
                       containers,
                       text,
                       plugins >= 1.6.0,
                       directory,
                       hashable,
                       monad-parallel,
                       haskeline
         ghc-options:
            -O2
            -threaded
            -with-rtsopts=-N
            -g
            -keep-o-files
            -keep-hi-files

executable GypsFulvus
         default-language:    Haskell2010
         build-depends:
                       base >= 4.7 && < 5,
                       stm,
                       containers,
                       text,
                       plugins >= 1.6.0,
                       directory,
                       hashable,
                       monad-parallel,
                       haskeline
         ghc-options:
            -O2
            -threaded
            -with-rtsopts=-N
            -g
            -keep-o-files
            -keep-hi-files
         hs-source-dirs:      src
         other-modules: GypsFulvus.PluginStuff,GypsFulvus, Carrion.Plugin.IO.STDIO
         exposed-modules: GypsFulvus
         main-is:             Main.hs

executable Test-Carrion-Plugin-IO-STDIO
           hs-source-dirs: src
           main-is: Test-STDIO-Haskeline.hs
           other-modules: Carrion.Plugin.IO.STDIO, GypsFulvus.PluginStuff
           build-depends:       base >= 4.7 && < 5,
                                stm,
                                text >= 1.2.4.0,
                                unix,
                                haskeline,
                                plugins,
                                directory,
                                containers,
                                hashable,
                                monad-parallel
           default-language:    Haskell2010
--           ld-options: -static
           ghc-options:
            -O2
            -threaded
            -with-rtsopts=-N
            -g
