name:                GypsFulvus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/hastur666/gypsfulvus/src/master/
license:             AGPL-3
license-file:        LICENSE
author:              no
maintainer:          no
copyright:           2020 confidential
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
         exposed-modules: GypsFulvus, GypsFulvus.PluginStuff, Carrion.Plugin.IO.STDIO, Carrion.Plugin.TCL
         other-modules:
         default-language:    Haskell2010
         hs-source-dirs:      src
         build-depends:
                       base >= 4.7 && < 5,
                       stm,
                       containers,
                       text,
                       directory,
                       hashable,
                       monad-parallel,
                       haskeline,
                       unix
         extra-libraries:     tcl8.6
         Includes:            /usr/include/tcl.h,
                              src/tclstubswrapper/tclstubs.h

         ghc-options:
            -O2
            -threaded
            -with-rtsopts=-N
            -g

executable GypsFulvus
         default-language:    Haskell2010
         build-depends:
                       base >= 4.7 && < 5,
                       stm,
                       containers,
                       text,
                       directory,
                       hashable,
                       monad-parallel,
                       haskeline,
                       unix
         ghc-options:
            -O2
            -threaded
            -with-rtsopts=-N
            -g
         hs-source-dirs:      src
         other-modules: GypsFulvus.PluginStuff,GypsFulvus, Carrion.Plugin.IO.STDIO, Carrion.Plugin.TCL
         exposed-modules: GypsFulvus
         extra-libraries:     tcl8.6
         Includes:            /usr/include/tcl.h,
                              src/tclstubswrapper/tclstubs.h
         C-Sources:           src/tclstubswrapper/tclstubs.c
         main-is:             Main.hs

--executable Test-Carrion-Plugin-IO-STDIO
--           hs-source-dirs: src
--           main-is: Test-STDIO-Haskeline.hs
--           other-modules: Carrion.Plugin.IO.STDIO, GypsFulvus.PluginStuff
--           build-depends:       base >= 4.7 && < 5,
--                                stm,
--                                text >= 1.2.4.0,
--                                unix,
--                                haskeline,
--                                plugins,
--                                directory,
--                                containers,
--                                hashable,
--                                monad-parallel
--           default-language:    Haskell2010
--           extra-libraries:     tcl8.6
--           Includes:            /usr/include/tcl.h,
--                                src/tclstubswrapper/tclstubs.h
--           C-Sources:           src/tclstubswrapper/tclstubs.c
----           ld-options: -static
--           ghc-options:
--            -O2
--            -threaded
--            -with-rtsopts=-N
--            -g

--executable Test-Carrion-Plugin-TCL
--           hs-source-dirs: src
--           main-is: Test-Carrion-TCL.hs
--           other-modules: Carrion.Plugin.TCL, GypsFulvus.PluginStuff
--           build-depends:       base >= 4.7 && < 5,
--                                stm,
--                                text >= 1.2.4.0,
--                                unix,
--                                plugins,
--                                haskeline,
--                                containers,
--                                directory,
--                                hashable,
--                                monad-parallel
--           default-language:    Haskell2010
--           extra-libraries:     tcl8.6
--           Includes:            /usr/include/tcl.h,
--                                src/tclstubswrapper/tclstubs.h
--           C-Sources:           src/tclstubswrapper/tclstubs.c
--           ghc-options:
--            -O2
--            -threaded
--            -with-rtsopts=-N
--            -g
